utilities/Sol/modules/grammars/option/src/test/resources/cocos/instance/valid/RequiredAssignment.option
option requiredPropCoCo: String {
    label "A Label"
    required true
}
