utilities/Sol/modules/grammars/option/src/test/resources/cocos/instance/invalid/RequiredAssignment.option
option requiredPropCoCo: String {
    required true
}
